--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BankConnection": "Host=91.230.230.249;Database=vitosha;Username=gosho;Password=gosho"
+  },
+  "Jwt": {
+    "Key": "NeverGonnaGiveYouUp"
+  },
+  "Email": {
+    "Email": "noreplyvitoshabank@gmail.com"
+  },
+  "Pass": {
+    "Pass": "GNAjuxtapose123"
   }
 }
